[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/images/checkers.png" type="Texture" id=1]
[ext_resource path="res://src/nodes/ScalableTextureContainer.gd" type="Script" id=2]

[node name="ScalableTextureContainer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="BGTextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputInfo" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileSizeLabel" type="Label" parent="InputInfo"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -56.0
margin_top = -21.0
margin_right = -2.0
margin_bottom = -2.0
grow_horizontal = 0
size_flags_vertical = 1
custom_colors/font_color = Color( 0.666667, 0.686275, 0.72549, 1 )
text = "64x64px"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
